[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-attest"
version = "0.7.0"
description = "Cryptographic attestation and verification layer for MCP tool executions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "attestation",
    "cryptographic-proof",
    "verification",
    "audit-trail",
    "event-sourcing",
    "decision-engine",
    "nexus-router",
    "xrpl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "nexus-router>=0.1.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.350",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/nexus-attest"
Repository = "https://github.com/mcp-tool-shop-org/nexus-attest"
Issues = "https://github.com/mcp-tool-shop-org/nexus-attest/issues"

[tool.hatch.build.targets.wheel]
packages = ["nexus_attest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["nexus_attest", "nexus_control"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
